<resources>
    <string name="app_name">FRSCommunity</string>
    <string name="user_login_et_user_hint">邮箱|账户|手机号</string>
    <string name="user_login_password_hint">密码</string>
    <string name="user_login_btn_text">登录</string>
    <string name="user_login_tv_register">没有账号|注册</string>
    <string name="user_register_btn_confirm_code">发送验证码</string>
    <string name="user_register_btn_register">注册</string>
    <string name="user_register_et_phone_number_hint">你的手机号码</string>
    <string name="user_register_et_confirm_code_hint">验证码</string>
    <string name="home_home">首页</string>
    <string name="home_blog">博客</string>
    <string name="home_founded">发现</string>
    <string name="home_answer">回答</string>
    <string name="home_self">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
